--- a/components/hello.twig
+++ b/components/hello.twig
@@ -32,17 +32,31 @@
 			margin: 16px 0 0 0;
 		}
 	</style>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 </head>
 <body>
+<a href="{{ path_for('database') }}">
+	<button>
+		Databases
+	</button>
+</a>
 <div class="welcome">
-	<a href="#" title="Boilerplate for Slim Framework 3">
-		<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-		<svg width="100" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-			 viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
-		<path fill="#81bb5e" d="M8,0C3.6,0,0,3.6,0,8s3.6,8,8,8s8-3.6,8-8S12.4,0,8,0z M7,11L4,8l1.5-1.5L7,8l3.5-3.5L12,6L7,11z"/>
-		</svg>
-	</a>
-	<h1>It is working.</h1>
+	<form name="form" method="post" action="{{ path_for('validate') }}">
+		<div id="form">
+			<div>
+				<label for="form_shortcode" class="required">Shortcode</label>
+				<input type="number" id="form_shortcode" name="shortcode" required="required"/>
+			</div>
+			<div>
+				<label for="form_bank_account" class="required">Account number</label>
+				<input type="number" id="form_bank_account" name="bank_account" required="required"/>
+			</div>
+			<div>
+				<button type="submit" id="form_submit" name="submit">Submit</button>
+			</div>
+		</div>
+	</form>
 </div>
 </body>
 </html>
